--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -7,14 +7,13 @@
 
         <nav id="navbar" class="navbar order-last order-lg-0">
             <ul>
-                <li><a class="nav-link scrollto" href="/">Home</a></li>
+                <li><a class="nav-link scrollto" href="/">Kotisivu</a></li>
                 <li><a class="nav-link scrollto" href="/faq">FAQ</a></li>
-                <li><a class="nav-link scrollto" href="/doctors">Doctors</a></li>
                 <li class="dropdown"><a href="#"><span>User</span> <i class="bi bi-chevron-down"></i></a>
                     <ul>
-                        <li><a href="/login">Login</a></li>
-                        <li><a href="/signup">Sign Up</a></li>
-                        <li><a href="/appointment">Add Appointment</a></li>
+                        <li><a href="/login">Kirjaudu sisään</a></li>
+                        <li><a href="/signup">Rikisteroidu</a></li>
+                        <li><a href="/appointment">Ajan Varaus</a></li>
                     </ul>
                 </li>
             </ul>
